--- a/webServer/platformio.ini
+++ b/webServer/platformio.ini
@@ -14,7 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_port = COM3
-lib_deps = 
-	sumotoy/SSD_13XX@^1.0
-	adafruit/Adafruit GFX Library@^1.11.5
-	adafruit/Adafruit SSD1306@^2.5.7
+;lib_deps = 
+;	sumotoy/SSD_13XX@^1.0
+;	adafruit/Adafruit GFX Library@^1.11.5
+;	adafruit/Adafruit SSD1306@^2.5.7
